finished bar graph

--- a/Desktop/graph_component/src/app/home/home.page.html
+++ b/Desktop/graph_component/src/app/home/home.page.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content>
-  <app-bar-graph [data]="barGraphData"></app-bar-graph>
+  <app-bar-graph [barGraphData]="barGraphData"></app-bar-graph>
 </ion-content>
