finished with line chart

--- a/Desktop/graph_component/src/app/components/bar-graph/bar-graph.component.html
+++ b/Desktop/graph_component/src/app/components/bar-graph/bar-graph.component.html
@@ -2,4 +2,4 @@
   {{ data | json}}
 </p>
 
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myBarChart" width="400" height="400"></canvas>
