--- a/Desktop/graph_component/src/app/home/home.page.html
+++ b/Desktop/graph_component/src/app/home/home.page.html
@@ -8,4 +8,5 @@
 
 <ion-content>
   <app-bar-graph [barGraphData]="barGraphData"></app-bar-graph>
+  <app-line-graph [lineGraphData]="lineGraphData"></app-line-graph>
 </ion-content>
